hphp/hack/test/typecheck/inout/bad_inout_use_arg10.php.exp
File "bad_inout_use_arg10.php", line 9, characters 11-11:
Variable Variables are not legal (Parsing[1002])
